@@ -20,7 +20,6 @@
 module BNFC.Backend.Haskell.CFtoAbstract (cf2Abstract) where
 
 import BNFC.CF
-import BNFC.Utils((+++))
 import BNFC.Backend.Haskell.Utils (catToType, catvars)
 import Text.PrettyPrint
 
@@ -31,16 +30,17 @@ cf2Abstract :: Bool     -- ^ Use ByteString instead of String
             -> String   -- ^ module name
             -> CF       -- ^ Grammar
             -> String
-cf2Abstract byteStrings ghcExtensions functor name cf = unlines $
-  (if ghcExtensions then "{-# LANGUAGE DeriveDataTypeable #-}" else "") :
-  (if ghcExtensions then "{-# LANGUAGE DeriveGeneric #-}" else "") :
-  ("module "++name +++ "where\n") :
+cf2Abstract byteStrings ghcExtensions functor name cf = render $ vcat $
+  (if ghcExtensions then "{-# LANGUAGE DeriveDataTypeable #-}" else empty) :
+  (if ghcExtensions then "{-# LANGUAGE DeriveGeneric #-}" else empty) :
+  ("module" <+> text name <+>  "where\n") :
   "-- Haskell module generated by the BNF converter\n" :
-  (if byteStrings then "import qualified Data.ByteString.Char8 as BS" else "") :
-  (if ghcExtensions then "import Data.Data (Data,Typeable)" else "") :
-  (if ghcExtensions then "import GHC.Generics (Generic)" else "") :
-  (map (render . \c -> prSpecialData byteStrings (isPositionCat cf c) derivingClasses c) (specialCats cf)
-  ++ map (render . prData functor derivingClasses) (cf2data cf))
+  (if byteStrings then "import qualified Data.ByteString.Char8 as BS" else empty) :
+  (if ghcExtensions then "import Data.Data (Data,Typeable)" else empty) :
+  "import Data.String (IsString(..))" :
+  (if ghcExtensions then "import GHC.Generics (Generic)" else empty) :
+  (map (\c -> prSpecialData byteStrings (isPositionCat cf c) derivingClasses c) (specialCats cf)
+  ++ map (prData functor derivingClasses) (cf2data cf))
   where
     derivingClasses = ["Eq","Ord","Show","Read"]
         ++ if ghcExtensions then ["Data","Typeable","Generic"] else []
@@ -128,15 +128,19 @@ genFunctorInstance (cat, cons) =
 --
 -- >>> prSpecialData False False ["Show"] (Cat "Ident")
 -- newtype Ident = Ident String deriving (Show)
+-- instance IsString Ident where fromString = Ident
 --
 -- >>> prSpecialData False True ["Show"] (Cat "Ident")
 -- newtype Ident = Ident ((Int,Int),String) deriving (Show)
+-- instance IsString Ident where fromString = Ident
 --
 -- >>> prSpecialData True False ["Show"] (Cat "Ident")
 -- newtype Ident = Ident BS.ByteString deriving (Show)
+-- instance IsString Ident where fromString = Ident
 --
 -- >>> prSpecialData True True ["Show"] (Cat "Ident")
 -- newtype Ident = Ident ((Int,Int),BS.ByteString) deriving (Show)
+-- instance IsString Ident where fromString = Ident
 prSpecialData :: Bool     -- ^ If True, use ByteString instead of String
               -> Bool     -- ^ If True, store the token position
               -> [String] -- ^ Derived classes
@@ -144,6 +148,7 @@ prSpecialData :: Bool     -- ^ If True, use ByteString instead of String
               -> Doc
 prSpecialData byteStrings position classes cat =
     hang newtype_ 2 (deriving_ classes)
+    $$ "instance IsString" <+> ppcat <+> "where fromString =" <+> ppcat
   where
     ppcat = text (show cat)
     newtype_ = "newtype" <+> ppcat <+> "=" <+> ppcat <+> contentSpec
